# filecord

./: .env  .gitignore  Cargo.toml  README.md
crates/cli/: Cargo.toml
crates/cli/src/: main.rs
crates/core/: Cargo.toml
crates/core/src/: chunker.rs  codec.rs  crypto.rs  hash.rs  lib.rs  manifests.rs  reconcile.rs  wal.rs
crates/discord/: Cargo.toml
crates/discord/src/: client.rs  lib.rs  rate.rs  types.rs
crates/fsindex/: Cargo.toml
crates/fsindex/src/: lib.rs  refs.rs  repo.rs
crates/server/: Cargo.toml
crates/server/src/: main.rs
src/: bot.rs  config.rs  main.rs  route.rs
