[package]
name = "filecord-cli"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = { workspace = true }
clap = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
dotenvy = { workspace = true }
filecord-fsindex = { path = "../fsindex" }
filecord-discord = { path = "../discord" }
filecord-core = { path = "../core" }
tokio = { workspace = true }
serde_json = { workspace = true }
