[package]
name = "filecord-server"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = { workspace = true }
axum = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
filecord-core = { path = "../core" }
filecord-discord = { path = "../discord" }
filecord-fsindex = { path = "../fsindex" }
